<resources>
    <string name="app_name">NewsViews</string>
    <string name="facebook_app_id">1953599904899922</string>
    <string name="fb_login_protocol_scheme">fb1953599904899922</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myself_intro_1">I am Kamrul Hasan</string>
    <string name="myself_intro_2">My niick name is Sobuj</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="social_login">Social Login</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="opps_network_error">Opps! Newtwork error. Please reload again</string>
    <string name="search">Search</string>
</resources>
