<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="@dimen/_5sdp"
    android:paddingEnd="@dimen/_5sdp"
    android:paddingTop="@dimen/_25sdp"
    android:paddingBottom="@dimen/_10sdp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_home"
            android:padding="@dimen/_2sdp"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_30sdp" />

        <TextView
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@color/black"
            android:text="@string/home"
            android:textSize="@dimen/_14sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"/>

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_social"
            android:padding="@dimen/_3sdp"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_30sdp" />

        <TextView
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@color/black"
            android:text="@string/social_login"
            android:textSize="@dimen/_14sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"/>

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_about"
            android:padding="@dimen/_3sdp"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_30sdp" />

        <TextView
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@color/black"
            android:text="@string/about"
            android:textSize="@dimen/_14sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"/>


    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/ic_exit"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_30sdp" />

        <TextView
            android:layout_marginStart="@dimen/_10sdp"

            android:textColor="@color/black"
            android:text="@string/exit"
            android:textSize="@dimen/_14sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"/>


</LinearLayout>
